Fixed some typos in Serbian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-09  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Fixed typos noticed by Bojan Suzić.
+
 2004-03-09  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spansih translation.
