--- a/po/sr@Latn.po
+++ b/po/sr@Latn.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-08 15:18+0100\n"
-"PO-Revision-Date: 2004-02-25 17:51+0100\n"
+"PO-Revision-Date: 2004-03-09 05:34+0100\n"
 "Last-Translator: Danilo Šegan <danilo@prevod.org>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -1113,11 +1113,7 @@ msgid ""
 "\"search_by_text\", then Nautilus will Search for files by file name only. "
 "If set to \"search_by_text_and_properties\", then Nautilus will search for "
 "files by file name and file properties."
-msgstr ""
-"Kriterijum za pretragu datoteka u okviru postrance. Ukoliko je postavljeno "
-"na „search_by_text“, onda će Nautilus tražiti datoteke samo prema imenu. "
-"Ukoliko je postavljeno na „search_by_text_and_properties“, onda će Nautilus "
-"tražiti datotek po imenu i po osobinama datoteke."
+msgstr "Kriterijum za pretragu datoteka u okviru postrance. Ukoliko je postavljeno na „search_by_text“, onda će Nautilus tražiti datoteke samo prema imenu. Ukoliko je postavljeno na „search_by_text_and_properties“, onda će Nautilus tražiti datoteke po imenu i po osobinama datoteke."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:7
 msgid "Current Nautilus theme (deprecated)"
@@ -1297,8 +1293,8 @@ msgid ""
 "If set to true, then Nautilus will ask for confirmation when you attempt to "
 "put files in the trash."
 msgstr ""
-"Ukoliko je postavljeno, Nautilus će tražiti odobrenje pri smeštanju datoteka "
-"u smeće."
+"Ukoliko je postavljeno, Nautilus će tražiti odobrenje pri smeštanju datoteka u "
+"smeće."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:42
 msgid ""
@@ -1336,8 +1332,8 @@ msgid ""
 "If set to true, then Nautilus will use the user's home folder as the "
 "desktop. If it is false, then it will use ~/Desktop as the desktop."
 msgstr ""
-"Ukoliko je postavljeno, Nautilus će koristiti lični direktorijum korisnika "
-"za radnu površinu. Ukoliko nije postavljeno, onda će koristiti ~/Desktop za "
+"Ukoliko je postavljeno, Nautilus će koristiti lični direktorijum korisnika za "
+"radnu površinu. Ukoliko nije postavljeno, onda će koristiti ~/Desktop za "
 "radnu površinu."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:47
@@ -1347,8 +1343,8 @@ msgid ""
 "behavior."
 msgstr ""
 "Ukoliko je postavljeno, onda su svi prozori Nautilusa razgledački prozori. "
-"Ovako se Nautilus ponašao pre izdanja 2.6, a neki ljudi više vole ovakav "
-"način rada."
+"Ovako se Nautilus ponašao pre izdanja 2.6, a neki ljudi više vole ovakav način "
+"rada."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:48
 msgid ""
@@ -1433,8 +1429,7 @@ msgstr ""
 msgid ""
 "If true, labels will be placed beside icons rather than underneath them."
 msgstr ""
-"Ukoliko je postavljeno, oznake će biti smeštene pored ikona umesto ispod "
-"njih."
+"Ukoliko je postavljeno, oznake će biti smeštene pored ikona umesto ispod njih."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:58
 msgid "If true, new windows will use manual layout by default."
@@ -1447,9 +1442,9 @@ msgid ""
 "setting is to avoid thumbnailing large images that may take a long time to "
 "load or use lots of memory."
 msgstr ""
-"Za slike koje prelaze ovu veličinu (u bajtovima) neće biti prikazana "
-"umanjena slika. Svrha ovoga je da se izbegne umanjivanje velikih slika što "
-"može oduzeti mnogo vremena ili memorije."
+"Za slike koje prelaze ovu veličinu (u bajtovima) neće biti prikazana umanjena "
+"slika. Svrha ovoga je da se izbegne umanjivanje velikih slika što može oduzeti "
+"mnogo vremena ili memorije."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:60
 msgid "List of possible captions on icons"
@@ -1531,10 +1526,10 @@ msgid ""
 "local filesystems. If set to \"never\" then it never previews sound."
 msgstr ""
 "Gubitak brzine radi pregleda zvučnih datoteka pri prelasku miša preko ikona "
-"datoteka. Ukoliko je postavljeno na „always“ uvek se pušta zvuk, čak i ako "
-"je datoteka na udaljenom računaru. Ukoliko je postavljeno na „local_only“, "
-"pušta se zvuk samo za lokalne datoteke. Ukoliko je postavljeno na „never“, "
-"nikad se ne pušta zvuk."
+"datoteka. Ukoliko je postavljeno na „always“ uvek se pušta zvuk, čak i ako je "
+"datoteka na udaljenom računaru. Ukoliko je postavljeno na „local_only“, pušta "
+"se zvuk samo za lokalne datoteke. Ukoliko je postavljeno na „never“, nikad se "
+"ne pušta zvuk."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:77
 msgid ""
@@ -1558,11 +1553,11 @@ msgid ""
 "set to \"never\" then never bother to thumbnail images, just use a generic "
 "icon."
 msgstr ""
-"Gubitak brzine radi pregleda umanjenih slika za slike. Ukoliko je "
-"postavljeno na „always“ uvek se prikazuje umanjena slika, čak i ako je "
-"datoteka na udaljenom računaru. Ukoliko je postavljeno na „local_only“, "
-"prikazuje se umanjena slika samo za lokalne datoteke. Ukoliko je postavljeno "
-"na „never“ koristi se opšta ikona."
+"Gubitak brzine radi pregleda umanjenih slika za slike. Ukoliko je postavljeno "
+"na „always“ uvek se prikazuje umanjena slika, čak i ako je datoteka na "
+"udaljenom računaru. Ukoliko je postavljeno na „local_only“, prikazuje se "
+"umanjena slika samo za lokalne datoteke. Ukoliko je postavljeno na „never“ "
+"koristi se opšta ikona."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:79
 msgid ""
@@ -1649,10 +1644,10 @@ msgid ""
 "\"ask\" to ask what to do via a dialog, and \"display\" to display them as "
 "text files."
 msgstr ""
-"Šta treba da uradi sa izvršnim tekstualnim datotekama pri njihovom "
-"aktiviranju (jednostruki ili dvostruki klik). Moguće vrednosti su „launch“ "
-"za pokretanje istih kao programa, „ask“ za postavljanje pitanja pomoću "
-"prozorčeta, i „display“ za prikazivanje kao tekstualnih datoteka."
+"Šta treba da uradi sa izvršnim tekstualnim datotekama pri njihovom aktiviranju "
+"(jednostruki ili dvostruki klik). Moguće vrednosti su „launch“ za pokretanje "
+"istih kao programa, „ask“ za postavljanje pitanja pomoću prozorčeta, i "
+"„display“ za prikazivanje kao tekstualnih datoteka."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:93
 msgid ""
@@ -1951,8 +1946,8 @@ msgid ""
 "\"%s\" cannot be deleted because you do not have permissions to modify its "
 "parent folder."
 msgstr ""
-"Ne može se obrisati „%s“ zato što nemate ovlašćenja da menjate direktorijum "
-"u kom se nalazi."
+"Ne može se obrisati „%s“ zato što nemate ovlašćenja da menjate direktorijum u "
+"kom se nalazi."
 
 #: libnautilus-private/nautilus-file-operations.c:569
 #, c-format
@@ -1965,8 +1960,8 @@ msgid ""
 "\"%s\" cannot be moved because you do not have permissions to change it or "
 "its parent folder."
 msgstr ""
-"Ne može se premestiti datoteka „%s“ zato što nemate ovlašćenja da menjate "
-"nju ili direktorijum u kom se nalazi."
+"Ne može se premestiti datoteka „%s“ zato što nemate ovlašćenja da menjate nju "
+"ili direktorijum u kom se nalazi."
 
 #: libnautilus-private/nautilus-file-operations.c:604
 msgid "Error while moving. "
@@ -2770,10 +2765,7 @@ msgid ""
 "Can't find description even for \"x-directory/normal\". This probably means "
 "that your gnome-vfs.keys file is in the wrong place or isn't being found for "
 "some other reason."
-msgstr ""
-"Ne može pronaći čak ni opis za \"x-directory/normal\". Ovo verovatno znači "
-"da je vaša datoteka gnome-vfs.keys na pogrešnom mesti, ili je ne može "
-"pronaći iz nekih drugih razloga."
+msgstr "Ne mogu pronaći čak ni opis za „x-directory/normal“. Ovo verovatno znači da je vaša datoteka gnome-vfs.keys na pogrešnom mestu, ili je ne mogu pronaći iz nekih drugih razloga."
 
 #: libnautilus-private/nautilus-file.c:4704
 #, c-format
@@ -3102,8 +3094,8 @@ msgid ""
 "Do you want to switch to manual layout and leave this item where you dropped "
 "it? This will clobber the stored manual layout."
 msgstr ""
-"Želite li da pređete na ručno raspoređivanje i ostavite ovu stavku tu gde "
-"ste je pustili? Ovo će izmeniti već sačuvan ručni raspored."
+"Želite li da pređete na ručno raspoređivanje i ostavite ovu stavku tu gde ste "
+"je pustili? Ovo će izmeniti već sačuvan ručni raspored."
 
 #: libnautilus-private/nautilus-icon-dnd.c:734
 #: libnautilus-private/nautilus-icon-dnd.c:738
@@ -3117,24 +3109,24 @@ msgid ""
 "Do you want to switch to manual layout and leave these items where you "
 "dropped them? This will clobber the stored manual layout."
 msgstr ""
-"Želite li da pređete na ručno raspoređivanje i ostavite ove stavke tu gde "
-"ste ih pustili? Ovo će izmeniti već sačuvan ručni raspored."
+"Želite li da pređete na ručno raspoređivanje i ostavite ove stavke tu gde ste "
+"ih pustili? Ovo će izmeniti već sačuvan ručni raspored."
 
 #: libnautilus-private/nautilus-icon-dnd.c:742
 msgid ""
 "Do you want to switch to manual layout and leave this item where you dropped "
 "it?"
 msgstr ""
-"Želite li da pređete na ručno raspoređivanje i ostavite ovu stavku tu gde "
-"ste je pustili?"
+"Želite li da pređete na ručno raspoređivanje i ostavite ovu stavku tu gde ste "
+"je pustili?"
 
 #: libnautilus-private/nautilus-icon-dnd.c:745
 msgid ""
 "Do you want to switch to manual layout and leave these items where you "
 "dropped them?"
 msgstr ""
-"Želite li da pređete na ručno raspoređivanje i ostavite ove stavke tu gde "
-"ste ih pustili?"
+"Želite li da pređete na ručno raspoređivanje i ostavite ove stavke tu gde ste "
+"ih pustili?"
 
 #: libnautilus-private/nautilus-icon-dnd.c:751
 msgid "Switch to Manual Layout?"
@@ -3177,13 +3169,9 @@ msgid ""
 "If you are using a packaged version of Nautilus, fast searching is not "
 "available.\n"
 msgstr ""
-"Meduza, program koji sprovodi pretragu, ne postoji na vašem sistemu. Ukoliko "
-"ste samostalno preveli Nautilus, treba da postavite i primerak Meduze ili "
-"ponovo prevede Nautilus. (Primerak Meduze je možda dostupan na ftp://ftp."
-"gnome.org)\n"
+"Meduza, program koji sprovodi pretragu, ne postoji na vašem sistemu. Ukoliko ste samostalno preveli Nautilus, treba da postavite i primerak Meduze ili ponovo prevedete Nautilus. (Primerak Meduze je možda dostupan na ftp://ftp.gnome.org)\n"
 "\n"
-"Ukoliko koristite pripremljeno izdanje Nautilusa, brze pretrage nisu "
-"dostupne.\n"
+"Ukoliko koristite pripremljeno izdanje Nautilusa, brze pretrage nisu dostupne.\n"
 
 #: libnautilus-private/nautilus-program-chooser.c:193
 #, c-format
@@ -4282,23 +4270,17 @@ msgid ""
 "\n"
 "NAUTILUS_SCRIPT_WINDOW_GEOMETRY: position and size of current window"
 msgstr ""
-"Sve izvršne datoteke u ovom direktorijumu će se pojaviti u meniju Skripte. "
-"Izborom skripte iz menija će se ona pokrenuti.\n"
+"Sve izvršne datoteke u ovom direktorijumu će se pojaviti u meniju Skripte. Izborom skripte iz menija će se ona pokrenuti.\n"
 "\n"
-"Kada se izvrše iz lokalnog direktorijuma, skripte će dobiti imena izabranih "
-"datoteka kao paramtere. Kada se izvrše iz udaljenih direktorijuma (npr. veb "
-"ili FTP), skripte neće dobiti nikakve parametre.\n"
+"Kada se izvrše iz lokalnog direktorijuma, skripte će dobiti imena izabranih datoteka kao parametre. Kada se izvrše iz udaljenih direktorijuma (npr. veb ili FTP), skripte neće dobiti nikakve parametre.\n"
 "\n"
-"U svim slučajevima, sledeće promenljive okruženja će postaviti Nautilus, "
-"koje skripte mogu koristiti:\n"
+"U svim slučajevima, sledeće promenljive okruženja će postaviti Nautilus, koje skripte mogu koristiti:\n"
 "\n"
-"NAUTILUS_SCRIPT_SELECTED_FILE_PATHS: putanje izabranih datoteka u zasebnim "
-"redovima (samo ako je lokalno)\n"
+"NAUTILUS_SCRIPT_SELECTED_FILE_PATHS: putanje izabranih datoteka u zasebnim redovima (samo ako je lokalno)\n"
 "\n"
-"NAUTILUS_SCRIPT_SELECTED_URIS: adrese izabranih datoteka u zasebnim "
-"redovima\n"
+"NAUTILUS_SCRIPT_SELECTED_URIS: adrese izabranih datoteka u zasebnim redovima\n"
 "\n"
-"NAUTILUS_SCRIPT_CURRENT_URI: Tekuća adresa\n"
+"NAUTILUS_SCRIPT_CURRENT_URI: tekuća adresa\n"
 "\n"
 "NAUTILUS_SCRIPT_WINDOW_GEOMETRY: mesto i veličina tekućeg prozora"
 
@@ -4456,7 +4438,7 @@ msgstr "Ova veza se ne može koristiti, zato što nema odredište."
 #: src/file-manager/fm-directory-view.c:5878
 #, c-format
 msgid "This link can't be used, because its target \"%s\" doesn't exist."
-msgstr "Ova veza se ne može koristiti, zato njeno odredište „%s“ ne postoji."
+msgstr "Ova veza se ne može koristiti, zato što njeno odredište „%s“ ne postoji."
 
 #: src/file-manager/fm-directory-view.c:5883
 msgid "Broken Link"
@@ -5005,8 +4987,8 @@ msgid ""
 "Search results may not include items modified after %s, when your drive was "
 "last indexed."
 msgstr ""
-"Rezultati pretrage možda neće sadržati stavke izmenjene nakon %s, kada je "
-"vaš disk poslednji put popisan."
+"Rezultati pretrage možda neće sadržati stavke izmenjene nakon %s, kada je vaš "
+"disk poslednji put popisan."
 
 #: src/file-manager/fm-search-list-view.c:144
 msgid "Search Results"
@@ -5431,13 +5413,11 @@ msgstr "Otvori izabranu stavku u ovom prozoru"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:31
 msgid "Prepare the selected files to be copied with a Paste Files command"
-msgstr ""
-"Pripremi izabrane datoteke za umnožavanje pomoću naredbe Ubaci datoteke"
+msgstr "Pripremi izabrane datoteke za umnožavanje pomoću naredbe Ubaci datoteke"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:32
 msgid "Prepare the selected files to be moved with a Paste Files command"
-msgstr ""
-"Pripremi izabrane datoteke za premeštanje pomoću naredbe Ubaci datoteke"
+msgstr "Pripremi izabrane datoteke za premeštanje pomoću naredbe Ubaci datoteke"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:33
 msgid "Prot_ect"
@@ -5601,11 +5581,11 @@ msgstr "Postavi sve izabrane ikone na izvornu veličinu"
 
 #: src/file-manager/nautilus-icon-view-ui.xml.h:22
 msgid "Str_etch Icon"
-msgstr "_Rastegli ikonu"
+msgstr "_Rastegni ikonu"
 
 #: src/file-manager/nautilus-icon-view-ui.xml.h:23
 msgid "Toggle using a tighter layout scheme"
-msgstr "Smesti prema gušćom rasporedu"
+msgstr "Koristi zbijeniji raspored"
 
 #: src/file-manager/nautilus-icon-view-ui.xml.h:24
 msgid "_Keep Aligned"
@@ -5659,9 +5639,8 @@ msgid ""
 "Fast searching is not enabled on your computer, so you do not have an index "
 "right now."
 msgstr ""
-"Kada je brza pretraga omogućena, obrazuje se popis za ubrzanje pretraga. "
-"Brzo pretraživanje nije omogućeno na vašem računaru, pa trenutno nemate "
-"popis."
+"Kada je brza pretraga omogućena, obrazuje se popis za ubrzanje pretraga. Brzo "
+"pretraživanje nije omogućeno na vašem računaru, pa trenutno nemate popis."
 
 #: src/file-manager/nautilus-indexing-info.c:262
 msgid "No Index of Files"
@@ -5689,11 +5668,11 @@ msgstr "Prikazane _kolone..."
 
 #: src/file-manager/nautilus-search-list-view-ui.xml.h:1
 msgid "Reveal each selected item in its original folder"
-msgstr "Razotkri sve izabrane stavke u matičnim direktorijumima"
+msgstr "Razotkrij sve izabrane stavke u matičnim direktorijumima"
 
 #: src/file-manager/nautilus-search-list-view-ui.xml.h:2
 msgid "Reveal in New Window"
-msgstr "Razotkri u novom prozoru"
+msgstr "Razotkrij u novom prozoru"
 
 #: src/file-manager/nautilus-search-list-view-ui.xml.h:3
 msgid "Show Indexing Status"
@@ -6719,7 +6698,7 @@ msgstr "Boja se ne može postaviti."
 
 #: src/nautilus-property-browser.c:1237
 msgid "Sorry, but you must specify a non-blank name for the new color."
-msgstr "Nažalost, morate unesti neprazno ime za novu boju."
+msgstr "Nažalost, morate uneti neprazno ime za novu boju."
 
 #: src/nautilus-property-browser.c:1238
 msgid "Couldn't Install Color"
@@ -7981,8 +7960,8 @@ msgstr "Pregledajte vaše mrežne servere u Nautilusovom upravniku datoteka"
 #~ msgstr ""
 #~ "Podrazumevana akcija ne može da otvori „%s“ zato što ne može da pristupi "
 #~ "datotekama na lokacijama „%s“. Nijedna druga akcija nije namenjena "
-#~ "pregledanju ove datoteke. Ukoliko prekopirate ovu datoteku na vaš "
-#~ "računar, možda ćete moći da je otvorite."
+#~ "pregledanju ove datoteke. Ukoliko prekopirate ovu datoteku na vaš računar, "
+#~ "možda ćete moći da je otvorite."
 
 # bug: plural-forms
 #~ msgid ""
