--- a/po/sr@ije.po
+++ b/po/sr@ije.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-08 20:18+0100\n"
-"PO-Revision-Date: 2004-03-08 15:13+0100\n"
+"PO-Revision-Date: 2004-03-09 05:33+0100\n"
 "Last-Translator: Bojan Suzic <bojans@teol.net>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -5589,7 +5589,7 @@ msgstr "_Растегни икону"
 # грешка
 #: src/file-manager/nautilus-icon-view-ui.xml.h:23
 msgid "Toggle using a tighter layout scheme"
-msgstr "Смјести према гушћем распореду"
+msgstr "Користи збијенији распоред"
 
 #: src/file-manager/nautilus-icon-view-ui.xml.h:24
 msgid "_Keep Aligned"
