--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-09  Sanlig Badral  <badral@openmn.org>
+
+	* mn.po: Updated Mongolian translation.
+
 2004-03-09  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Fixed typos noticed by Bojan Suzić.
