Visiting and accept modifiers were reversed.
2004-03-10  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-list-model.c (fm_list_model_get_value):
	Visiting and accept modifiers were reversed.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-10  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-list-model.c (fm_list_model_get_value):
+	Visiting and accept modifiers were reversed.
+
 2004-03-09  Alexander Larsson  <alexl@redhat.com>
 
 	* components/image_properties/nautilus-image-properties-view.c:
