--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-10  Sanlig Badral  <badral@openmn.org>
+
+        * mn.po: Updated Mongolian translation. 
+
 2004-03-10  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated.
