--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-11  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2004-03-10  Sanlig Badral  <badral@openmn.org>
 
         * mn.po: Updated Mongolian translation. 
