--- a/po/sv.po
+++ b/po/sv.po
@@ -10,14 +10,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-08 15:18+0100\n"
-"PO-Revision-Date: 2004-03-04 11:11+0100\n"
+"POT-Creation-Date: 2004-03-11 01:17+0100\n"
+"PO-Revision-Date: 2004-03-11 01:17+0100\n"
 "Last-Translator: Christian Rose <menthos@menthos.com>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: components/adapter/Nautilus_ComponentAdapterFactory_std.server.in.in.h:1
@@ -6501,7 +6501,7 @@ msgstr "_Hem"
 
 #: src/nautilus-navigation-window-ui.xml.h:36
 msgid "_Location..."
-msgstr "_Plats..."
+msgstr "Pl_ats..."
 
 #: src/nautilus-navigation-window-ui.xml.h:37
 msgid "_Side Pane"
@@ -6515,7 +6515,7 @@ msgstr "_Mallar"
 #: src/nautilus-navigation-window-ui.xml.h:39
 #: src/nautilus-spatial-window-ui.xml.h:16
 msgid "_Trash"
-msgstr "Pappers_korg"
+msgstr "_Papperskorg"
 
 #: src/nautilus-navigation-window-ui.xml.h:40
 msgid "_Up"
