Updated Brazilian Portuguese translation done by Raphael Higino
2004-03-11  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>

        * pt_BR.po: Updated Brazilian Portuguese translation done by
        Raphael Higino <raphaelh@uai.com.br>.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-11  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation done by
+	Raphael Higino <raphaelh@uai.com.br>.
+
 2004-03-11  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
