--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-12  Sayamindu Dasgupta	<sayamindu@clai.net>
+
+	* bn.po: Updated Bengali translation (done by Progga
+	<abulfazl@juniv.edu>
+	
 2004-03-11  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation done by
