--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-13  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation by Vladimir "Kaladan"
+	Petkov <vpetkov@i-space.org>
+
 2004-03-12  Sayamindu Dasgupta	<sayamindu@clai.net>
 
 	* bn.po: Updated Bengali translation (done by Progga
