--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-13  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation.
+
 2004-03-13  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by Vladimir "Kaladan"
