--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-13  Christian Neumair  <chris@gnome-de.org>
+
+	* POTFILES.in: Removed medusa/search-related files as discussed on
+	nautilus-list.
+	* POTFILES.skip: Added them here.
+
 2004-03-13  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
