--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-13  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated.
+
 2004-03-13  Christian Neumair  <chris@gnome-de.org>
 
 	* POTFILES.in: Removed medusa/search-related files as discussed on
