--- a/po/nl.po
+++ b/po/nl.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-09 04:22+0100\n"
+"POT-Creation-Date: 2004-03-13 15:40+0100\n"
 "PO-Revision-Date: 2004-02-27 13:25+0100\n"
 "Last-Translator: Reinout van Schouwen <reinout@cs.vu.nl>\n"
 "Language-Team: Dutch <vertaling@nl.linux.org>\n"
@@ -350,7 +350,7 @@ msgstr "Toepassingen"
 
 #: data/applications.desktop.in.h:2
 msgid "Browse available software"
-msgstr "Beschikbare software doorbladeren"
+msgstr "Beschikbare software"
 
 #: data/browser.xml.h:1
 msgid "Apparition"
@@ -3907,7 +3907,7 @@ msgstr "Uw persoonlijke map weergeven met Nautilus bestandsbeheer"
 
 #: nautilus.desktop.in.h:1
 msgid "Browse Filesystem"
-msgstr "Bestandssysteem doorbladeren"
+msgstr "Bestandsbeheer"
 
 #: nautilus.desktop.in.h:2
 msgid "Browse the filesystem with the file manager"
@@ -4434,7 +4434,7 @@ msgstr "Verwijder alle geselecteerde items blijvend"
 #: src/file-manager/fm-directory-view.c:5883
 #: src/file-manager/nautilus-directory-view-ui.xml.h:20
 msgid "Mo_ve to Trash"
-msgstr "Verplaatsen naar _Prullenbak"
+msgstr "Verplaatsen naar _prullenbak"
 
 #: src/file-manager/fm-directory-view.c:5547
 #: src/file-manager/nautilus-directory-view-ui.xml.h:22
