--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-14  Maxim Dziumanenko <mvd@mylinux.com.ua>
+
+	* uk.po: Updated Ukrainian translation
+
 2004-03-13  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated.
