--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-15  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS: 
+	* configure.in:
+	Update to 2.5.91
+
 2004-03-10  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-list-model.c (fm_list_model_get_value):
