--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,9 @@
-This is nautilus 2.5.90, the file manager for the Gnome 2 desktop.
+This is nautilus 2.5.91, the file manager for the Gnome 2 desktop.
+
+Major changes since 2.5.90 are:
+* Handle failures when opening new window better (don't loop)
+* visiting and accept modifiers were reversed in list view
+* Build fixes
 
 Major changes since 2.5.8 are:
 * Beter typeahead in list view
