--- a/po/uk.po
+++ b/po/uk.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-14 10:21+0200\n"
+"POT-Creation-Date: 2004-03-15 15:19+0100\n"
 "PO-Revision-Date: 2004-03-14 10:22+0200\n"
 "Last-Translator: Maxim Dzumanenko <mvd@mylinux.com.ua>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
@@ -1326,7 +1326,8 @@ msgid ""
 "behavior."
 msgstr ""
 "Якщо встановлено, тоді всі вікна Наутілуса будуть вікнами броузера. Наутілус "
-"мав такий вигляд до GNOME 2.6, та деякі користувачі надають перевагу такому вигляду."
+"мав такий вигляд до GNOME 2.6, та деякі користувачі надають перевагу такому "
+"вигляду."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:48
 msgid ""
@@ -1360,8 +1361,7 @@ msgid ""
 "If this is set to true, an icon linking to the computer location will be put "
 "on the desktop."
 msgstr ""
-"Якщо встановлено, на робочій стільниці відображатиметься значок "
-"комп'ютера."
+"Якщо встановлено, на робочій стільниці відображатиметься значок комп'ютера."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:52
 msgid ""
@@ -1413,8 +1413,7 @@ msgstr ""
 msgid ""
 "If true, labels will be placed beside icons rather than underneath them."
 msgstr ""
-"Якщо встановлено, підписи будуть розташовані збоку від значка, а не під "
-"ними."
+"Якщо встановлено, підписи будуть розташовані збоку від значка, а не під ними."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:58
 msgid "If true, new windows will use manual layout by default."
@@ -1563,10 +1562,9 @@ msgid ""
 "The default sort-order for items in the icon view. Possible values are \"name"
 "\", \"size\", \"type\", \"modification_date\", and \"emblems\"."
 msgstr ""
-"Типовий порядок сортування для режиму відображення \"Показати як значки"
-"\". Можливі значення \"name\" (за назвою), \"size\" (за розміром), \"type"
-"\" (за типом), \"modification_date\" (за часом зміни), \"emblems\" (за "
-"емблемами)."
+"Типовий порядок сортування для режиму відображення \"Показати як значки\". "
+"Можливі значення \"name\" (за назвою), \"size\" (за розміром), \"type\" (за "
+"типом), \"modification_date\" (за часом зміни), \"emblems\" (за емблемами)."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:81
 msgid ""
@@ -1596,8 +1594,7 @@ msgid ""
 "This name can be set if you want a custom name for the home icon on the "
 "desktop."
 msgstr ""
-"Якщо ви бажаєте мати власну назву значка домашнього каталогу, введіть її "
-"тут."
+"Якщо ви бажаєте мати власну назву значка домашнього каталогу, введіть її тут."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:86
 msgid ""
@@ -1645,8 +1642,7 @@ msgid ""
 msgstr ""
 "При відвідуванні нової теки буде використовуватись цей режим перегляду, якщо "
 "ви не вибрали інший режим перегляду для цієї окремої теки. Можливі варіанти "
-"- \"list_view\" (показати як список) и \"icon_view\" (показати як "
-"значки)."
+"- \"list_view\" (показати як список) и \"icon_view\" (показати як значки)."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:94
 msgid "When to show number of items in a folder"
@@ -2753,9 +2749,9 @@ msgid ""
 "that your gnome-vfs.keys file is in the wrong place or isn't being found for "
 "some other reason."
 msgstr ""
-"Не вдається навіть знайти опис для \"x-directory/normal\". Можливо це означає, "
-"що файл gnome-vfs.keys знаходиться у неправильному місці, або його не можна "
-"знайти з інших причин."
+"Не вдається навіть знайти опис для \"x-directory/normal\". Можливо це "
+"означає, що файл gnome-vfs.keys знаходиться у неправильному місці, або його "
+"не можна знайти з інших причин."
 
 #: libnautilus-private/nautilus-file.c:4704
 #, c-format
@@ -3625,8 +3621,7 @@ msgstr ""
 #: src/Nautilus_shell.server.in.h:12
 msgid "Nautilus file manager component that shows icons on the desktop"
 msgstr ""
-"Компонент менеджера файлів \"Наутілус\", що відображує значки на "
-"стільниці"
+"Компонент менеджера файлів \"Наутілус\", що відображує значки на стільниці"
 
 #: src/Nautilus_shell.server.in.h:13
 msgid "Nautilus file manager desktop icon view"
@@ -3844,7 +3839,8 @@ msgstr "Надто багато файлів"
 
 #: src/file-manager/fm-directory-view.c:3247
 msgid "Cannot move file to trash, do you want to delete immediately?"
-msgstr "Не вдається перемістити файл у смітник, бажаєте остаточно його видалити?"
+msgstr ""
+"Не вдається перемістити файл у смітник, бажаєте остаточно його видалити?"
 
 #: src/file-manager/fm-directory-view.c:3248
 #, c-format
@@ -3926,14 +3922,15 @@ msgid ""
 "extension for \"%s\", then open the file normally. Alternatively, use the "
 "Open With menu to choose a specific application for the file. "
 msgstr ""
-"Назва файлу \"%s\" вказує, що цей файл належить до типу \"%s\". Вміст "
-"файлу вказує, що файл належить до типу \"%s\". Відкривання цього файлу "
-"може становити загрозу безпеці вашої системи.\n"
+"Назва файлу \"%s\" вказує, що цей файл належить до типу \"%s\". Вміст файлу "
+"вказує, що файл належить до типу \"%s\". Відкривання цього файлу може "
+"становити загрозу безпеці вашої системи.\n"
 "\n"
 "Не відкривайте файл, якщо ви не створили його власноруч, або отримали з "
-"довіреного джерела. Щоб відкрити файл, перейменуйте його, щоб він мав відповідне "
-"розширення для \"%s\", потім відкрийте звичайним способом. Або ж, "
-"використовуйте пункт контекстного меню \"Відкрити використовуючи\" для вибору програми для цього файлу."
+"довіреного джерела. Щоб відкрити файл, перейменуйте його, щоб він мав "
+"відповідне розширення для \"%s\", потім відкрийте звичайним способом. Або ж, "
+"використовуйте пункт контекстного меню \"Відкрити використовуючи\" для "
+"вибору програми для цього файлу."
 
 #: src/file-manager/fm-directory-view.c:4293
 #, c-format
@@ -4303,7 +4300,8 @@ msgstr "Помилка встановлення групи"
 #, c-format
 msgid "Couldn't change the owner of \"%s\" because it is on a read-only disk"
 msgstr ""
-"Не вдається змінити власника \"%s\" через те, що цей диск лише для зчитування."
+"Не вдається змінити власника \"%s\" через те, що цей диск лише для "
+"зчитування."
 
 #: src/file-manager/fm-error-reporting.c:210
 #, c-format
@@ -5574,8 +5572,7 @@ msgstr ""
 
 #: src/nautilus-information-panel.c:506
 msgid "You can't assign more than one custom icon at a time."
-msgstr ""
-"Пов'язування більше ніж з одним нетиповим значком одночасно неможливе."
+msgstr "Пов'язування більше ніж з одним нетиповим значком одночасно неможливе."
 
 #: src/nautilus-information-panel.c:535
 msgid "You can only use images as custom icons."
