Updated Welsh translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-16  Dafydd Harries  <daf@muse.19inch.net>
+
+	* cy.po: Updated Welsh translation.
+
 === nautilus 2.5.91 ===
 
 2004-03-14  Maxim Dziumanenko <mvd@mylinux.com.ua>
