--- a/po/th.po
+++ b/po/th.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-15 15:19+0100\n"
-"PO-Revision-Date: 2004-03-07 21:20-0600\n"
+"PO-Revision-Date: 2004-03-16 05:05-0600\n"
 "Last-Translator: Paisa Seeluangsawat <paisa@users.sf.net>\n"
 "Language-Team: Thai <L10n@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -188,7 +188,7 @@ msgstr "ยี่ห้อกล้อง"
 
 #: components/image_properties/nautilus-image-properties-view.c:193
 msgid "Camera Model"
-msgstr "รุ่นกล้อง"
+msgstr "รุ่นกล้อง"
 
 #: components/image_properties/nautilus-image-properties-view.c:194
 msgid "Date Taken"
