--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-17  Andras Timar  <timar@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2004-03-16  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated  Greek translation.
