Updated Thai translation.
2004-03-17  Paisa Seeluangsawat  <paisa@users.sf.net>

	* th.po: Updated Thai translation.

--- a/po/th.po
+++ b/po/th.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-15 15:19+0100\n"
-"PO-Revision-Date: 2004-03-16 05:05-0600\n"
+"PO-Revision-Date: 2004-03-16 05:09-0600\n"
 "Last-Translator: Paisa Seeluangsawat <paisa@users.sf.net>\n"
 "Language-Team: Thai <L10n@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -5705,7 +5705,7 @@ msgstr "แถบข้าง"
 
 #: src/nautilus-navigation-window.c:1258
 msgid "Contains a side pane view"
-msgstr "บันจุมุมมองแถบข้างอันนึง"
+msgstr "บรรจุมุมมองแถบข้างอันนึง"
 
 #: src/nautilus-profiler.c:209
 msgid "Print"
