--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-18  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation.
+
 2003-03-17  Andras Timar  <timar@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
