--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-18  Arafat Medini  <lumina@silverpen.de>
+
+	* ar.po: Updated Arabic translation.
+
 2004-03-18  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
