--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-19  Leonid Kanter  <leon@asplinux.ru>
+
+	* ru.po: Fixed typo in Russian translation (missed tag bracket)
+
 2004-03-19  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* ru.po: Updated Russian translation
