ru.po: Updated Russian translation from Russian team <gnome-cyr@gnome.org>.

--- a/po/ru.po
+++ b/po/ru.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-02-26 16:37+0300\n"
-"PO-Revision-Date: 2004-03-19 13:00+0300\n"
+"PO-Revision-Date: 2004-03-19 13:39+0300\n"
 "Last-Translator: Dmitry G. Mastrukov <dmitry@taurussoft.org>\n"
 "Language-Team: Russian <gnome-cyr@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -6051,7 +6051,7 @@ msgstr ""
 
 #: src/nautilus-file-management-properties.glade.h:30
 msgid "<span weight=\"bold\">List Columns</span>"
-msgstr "<span weight=\"bold\">Видимые столбцы/span>"
+msgstr "<span weight=\"bold\">Видимые столбцы</span>"
 
 #: src/nautilus-file-management-properties.glade.h:31
 msgid "<span weight=\"bold\">List View Defaults</span>"
