--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -3,6 +3,11 @@
 	* ru.po: Updated Russian translation
 	from Russian team <gnome-cyr@gnome.org>.
 
+2004-03-19  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
+
+	* ru.po: Updated Russian translation
+	from Russian team <gnome-cyr@gnome.org>.
+
 2004-03-19  Leonid Kanter  <leon@asplinux.ru>
 
 	* ru.po: Fixed typo in Russian translation (missed tag bracket)
